export enum MeasurementSource {
  MANUAL = 'manual',
  OPENWEATHER = 'openweather',
}
