classDiagram
direction LR

%% Users domain
class User["User (AggregateRoot)"] {
  +create(props)
  +getRole()
  +changeName(name, lastName)
  +changePasswordHash(passwordHash)
}

class UserNotificationProfile["UserNotificationProfile (AggregateRoot)"] {
  +subscribeToAlerts(stationId, alertTypes)
  +updateAlertTypesForStation(stationId, alertTypes)
  +configureTelegramDelivery(chatId)
  +startTelegramLinking(code, expiresAt)
  +hasActiveTelegramLinkCode(code, now)
  +isSubscribedToAlert(stationId, alertType)
  +getDeliveryChannels()
  +getTelegramLinking()
}

class Email["Email (ValueObject)"] {
  +create(raw)
  +getValue()
  +equals(other)
}

class UserRole["UserRole (Enumeration)"] {
  USER
  ADMIN
}

class UserDeliveryChannels["UserDeliveryChannels (ValueObject)"] {
  +telegram
  +log
  +inApp
}

class TelegramDeliveryChannel["TelegramDeliveryChannel (ValueObject)"] {
  +chatId
}

class Notification["Notification (AggregateRoot)"] {
  +create(props)
  +markRead(readAt)
  +getUserId()
  +getStationId()
  +getAlertType()
  +getMessageId()
}

class UserTelegramLinking["UserTelegramLinking (ValueObject)"] {
  +code
  +expiresAt
}

%% Stations domain
class WeatherStation["WeatherStation (AggregateRoot)"] {
  +create(props)
  +rename(name)
  +relocate(location)
  +configureAlerts(props)
  +activate()
  +deactivate()
}

class Location["Location (ValueObject)"] {
  +create(latitude, longitude)
  +getLatitude()
  +getLongitude()
  +equals(other)
}

class StationAlertSettings["StationAlertSettings (ValueObject)"] {
  +create(props)
  +isExtremeHeatEnabled()
  +isFrostEnabled()
  +isStormEnabled()
  +isCriticalHumidityEnabled()
}

class StationStatus["StationStatus (Enumeration)"] {
  ACTIVE
  INACTIVE
}

class WeatherProvider["WeatherProvider (ValueObject)"] {
  +create(value)
  +getValue()
  +equals(other)
}

class WeatherProviderCode["WeatherProviderCode (Enumeration)"] {
  NONE
  OPENWEATHER
}

%% Measurements domain
class Measurement["Measurement (AggregateRoot)"] {
  +create(props)
  +evaluateAlerts(evaluator, alertSettings)
  +applyAlert(alertType)
  +clearAlert()
  +hasAlert()
  +getAlertType()
}

class Temperature["Temperature (ValueObject)"] {
  +create(celsius)
  +getValue()
  +isExtremeHeat()
  +isFrost()
}

class Humidity["Humidity (ValueObject)"] {
  +create(percent)
  +getValue()
  +isCritical()
}

class Pressure["Pressure (ValueObject)"] {
  +create(hpa)
  +getValue()
  +isStorm()
}

class AlertType["AlertType (Enumeration)"] {
  NONE
  EXTREME_HEAT
  FROST
  STORM
  CRITICAL_HUMIDITY
}

class MeasurementSource["MeasurementSource (Enumeration)"] {
  MANUAL
  OPENWEATHER
}

class AlertEvaluator["AlertEvaluator (DomainService)"] {
  +evaluate(measurement, alertSettings)
}

class MeasurementAlertDetectedEvent["MeasurementAlertDetectedEvent (DomainEvent)"] {
  +EVENT_NAME
  +measurementId
  +stationId
  +alertType
}

User *-- Email : email
User --> UserRole : role
UserNotificationProfile *-- UserDeliveryChannels : delivery channels
UserDeliveryChannels *-- TelegramDeliveryChannel : telegram
UserNotificationProfile *-- UserTelegramLinking : telegram linking
User --> Notification : receives
Notification --> AlertType : alert type
WeatherStation *-- Location : location
WeatherStation *-- StationAlertSettings : alert settings
WeatherStation --> StationStatus : status
WeatherStation *-- WeatherProvider : provider
WeatherProvider ..> WeatherProviderCode : wraps
Measurement *-- Temperature : temperature
Measurement *-- Humidity : humidity
Measurement *-- Pressure : pressure
Measurement --> AlertType : alert type
Measurement --> MeasurementSource : source
Measurement ..> AlertEvaluator : evaluate alerts
AlertEvaluator ..> StationAlertSettings : threshold switches
AlertEvaluator ..> AlertType : returns
MeasurementAlertDetectedEvent --> AlertType : payload
